fix testimonial text sizing on mobile

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -372,7 +372,6 @@
 	padding-right: 15px;
 }
 .testimonial-text p {
-	font-size: 26px;
 	padding: 0;
 }
 .why-choose-img img {
